Decrease z-index of audio bar to avoid issues with modal

--- a/modules/music/client/components/style/audio.scss
+++ b/modules/music/client/components/style/audio.scss
@@ -84,7 +84,7 @@
 .audioBar {
   transition: transform 0.5s ease;
   transform: translate3d(0, 100%, 0);
-  z-index: 10001;
+  z-index: 100;
   touch-action: none;
 
   .metaOnPlayInfo {
